# Collab-board

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  SETUP_GUIDE.md  components.json  index.html  package-lock.json  package.json  supabase-setup.sql  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
api/: ai-command.ts
services/intent-recognition/: .dockerignore  Dockerfile  main.py
src/: App.tsx  index.css
src/components/: AICommandInput.tsx  CursorTracker.tsx  OnlineUsers.tsx  RemoteCursors.tsx  ThemeModal.tsx  Toolbar.tsx  Whiteboard.tsx
src/context/: AuthContext.tsx  CollabContext.tsx  ThemeContext.tsx
src/hooks/: useAIAgent.ts  useBoardSync.ts  useCursorTracking.ts  usePresence.ts  useUndoRedo.ts
src/lib/: cursorColors.ts  userCache.ts
src/pages/: AuthCallback.tsx  Board.tsx  Dashboard.tsx  Login.tsx
src/store/: boardStore.ts
token-optimizer/: collab_board_workflow.py  config.yaml  pyproject.toml  requirements.txt
token-optimizer/token_optimizer/: __init__.py  model_router.py  quality_validator.py  token_estimator.py  token_tracker.py
token-optimizer/token_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
